Add statistic endpoint documentation
